[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "skill_refactor"
version = "0.1.0"
description = "A basic starter for Python packages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "numpy",
   "hydra-core",
   "omegaconf",
   "types-PyYAML",
   "types-tqdm",
   "tensorboard",
   "wandb",
   "tomsutils@git+https://github.com/tomsilver/toms-utils.git",
   "gymnasium==0.29.1",
   "moviepy",
   "types-tabulate",
   "stable-baselines3==2.6.0",
   "mani_skill==3.0.0b21",
   "pymunk"
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prbench_bilevel_planning = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = "(third-party|\\.venv)"

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*", "third-party/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88
exclude = ["venv", ".venv", "third-party"]

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", "third-party/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "torch.*",
    "mani_skill.*",
    "sapien.*",
    "transforms3d.*",
    "pyperplan.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--ignore=third-party"]
